align fixed

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.todo {
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
